2008-09-17  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.TextEditor.mdp: Updated projects.

2008-09-17  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.TextEditor/CodeSegmentPreviewWindow.cs: Fix crash caused by the
	  double buffer flag. Dispose resources on destroy.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/generated.cs, gtk-gui/objects.xml: Updated generated code.

2008-09-08  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: fixed "Bug 423278 - wrong view when
	  jumping in editor without scrollbar".

2008-08-21  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs: optimized copy/cut.

2008-08-21  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs, Mono.TextEditor/LineSegmentTree.cs,
	  Mono.TextEditor/TextEditor.cs, Mono.TextEditor/LineSplitter.cs,
	  Mono.TextEditor.Highlighting/SyntaxModeService.cs: Optimized text
	  editor. Syntax update is now running on a single thread using a
	  queue. Optimized the offset2line number operation.

2008-08-21  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs, Mono.TextEditor/TextEditor.cs,
	  Mono.TextEditor/GutterMargin.cs, Mono.TextEditor/TextViewMargin.cs:
	  Worked on gutter width change.

2008-08-21  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.mdp: set referenced gtk sharp version back to 2.8.
	* Mono.TextEditor/CodeSegmentPreviewWindow.cs: fixed compiler warning.

2008-08-21  Mike Krüger <mkrueger@novell.com> 

	* TangoLightStyle.xml, JavascriptSyntaxMode.xml, Styles,
	  Styles/TangoLightStyle.xml, Styles/OblivionStyle.xml,
	  Styles/BrownStyle.xml, Styles/VisualStudioStyle.xml,
	  Styles/C64Style.xml, VBNetSyntaxMode.xml, BooSyntaxMode.xml,
	  CSharpSyntaxMode.xml, PythonSyntaxMode.xml, JavaSyntaxMode.xml,
	  CPPSyntaxMode.xml, CSyntaxMode.xml, ValaSyntaxMode.xml,
	  OblivionStyle.xml, ChangeLogSyntaxMode.xml, AspNetSyntaxMode.xml,
	  gtk-gui/objects.xml, BrownStyle.xml, XmlSyntaxMode.xml,