@@ -1,3 +1,8 @@
+2008-09-22  Mike Krüger <mkrueger@novell.com> 
+
+	* Mono.TextEditor/TextEditor.cs: Handled tooltip provider exception, to
+	  prevent a text editor crash.
+
 2008-09-17  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* Mono.TextEditor.mdp: Updated projects.
